# WayfinDex

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  config.yaml.example  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  README.md
src/: __init__.py  main.py
src/helpers/: __init__.py  agents.py  config.py  data.py  models.py  templating.py  type_models.py
src/prompts/: place_search.txt
src/templates/: place_note.md
