[project]
name = "wayfindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.26.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
wayfindex = "src.main:main"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
